--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,6 @@ devel
 profile.tmp
 
 /data_science/data
-/data_science/models
+/data_science/models/*.h5
 .ipynb_checkpoints
 **/*.ipynb_checkpoints/*
